Finsihed web api base model, user model, controller and application design

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# Global Gitignore file
+
+# Ignore compiled code and build files
 **/bin/
 **/obj/
 **/.vs/
-**/Lab2_project_folder
 **appsettings.Development.json
 **appsettings.json
+
+# Ignore Node.js modules
+node_modules/
