--- a/AspNetWebService.Tests/AspNetWebService.Tests.csproj
+++ b/AspNetWebService.Tests/AspNetWebService.Tests.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Unit\Controllers\" />
     <Folder Include="Unit\Services\Logging\" />
+    <Folder Include="Unit\Services\Utilities\" />
     <Folder Include="Unit\Services\UserManagement\" />
   </ItemGroup>
 
