Added API versioning and adjusted fail checking in controllers/services for more clean approach and reduced nested loops

--- a/AspNetWebService.Tests/AspNetWebService.Tests.csproj
+++ b/AspNetWebService.Tests/AspNetWebService.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Unit\Controllers\" />
+    <Folder Include="Unit\Middleware\" />
     <Folder Include="Unit\Services\Logging\" />
     <Folder Include="Unit\Services\Utilities\" />
     <Folder Include="Unit\Services\UserManagement\" />
