Made adjustments to re reference main project after changing names

--- a/IdentityServiceApi.Tests/IdentityServiceApi.Tests.csproj
+++ b/IdentityServiceApi.Tests/IdentityServiceApi.Tests.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AspNetWebService\IdentityServiceApi.csproj" />
+    <ProjectReference Include="..\IdentityServiceApi\IdentityServiceApi.csproj" />
   </ItemGroup>
 
 </Project>
